# msp430-cpp

./: CMakeLists.txt  README.md
cmake/: msp430-elf.cmake
lib/: button.h  gpio.h  led.h  simple-button.h  spi.h  uart.h
lib/msp430/: btn.h  gpio.h  led.h  usci-spi.h  usci-uart.h  usci.h
src/: main.cpp
